# Tangent

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  SparseBlockMatrix.md  docker-compose.yml
.github/workflows/: benchmark.yml  test.yml
bench/: CMakeLists.txt  SlotMapBenchmark.cpp  SparseBlockMatrixBenchmark.cpp
cmake/: ArgMinConfig.cmake.in  Dependencies.cmake
docs/: SSEOptimizer.md  SlotMap.md  conf.py  getting-started-cpp.rst  getting-started-python.rst  getting-started.rst  index.rst  requirements.txt
docs/api/: error-terms.rst  index.rst  python.rst
docs/concepts/: autodiff.rst  error-terms.rst  index.rst  variables.rst
include/argmin/: BlockVector.h  Containers.h  ErrorTermBase.h  ErrorTermValidator.h  GaussianPrior.h  Key.h  Logging.h  Marginalizer.h  NumericalDifferentiator.h  PSDSchurSolver.h  SSEOptimizer.h  SlotArray.h  SparseBlockMatrix.h  SparseBlockRow.h
include/argmin/Containers/: Key.h  SlotMap.h
include/argmin/Differentiation/: NumericalDifferentiator.h
include/argmin/ErrorTerms/: ErrorTermBase.h  ErrorTermValidator.h
include/argmin/Optimization/: HuberLossFunction.h  Marginalizer.h  OptimizerContainers.h  PSDSchurSolver.h  SSEOptimizer.h
include/argmin/ParallelAlgorithms/: ParallelAlgorithms.h  ThreadingHelpers.h
include/argmin/Types/: BlockVector.h  GaussianPrior.h  MetaHelpers.h  SparseBlockMatrix.h  SparseBlockRow.h
include/argmin/Utilities/: Profiling.h
include/argmin/Variables/: InverseDepth.h  OptimizableVariable.h  SE3.h  SO3.h  SimpleScalar.h
python/: Dockerfile
python/tangent_py/: core.py  optimizer.py  templates.py
test/: CMakeLists.txt  TestArgMin.cpp  TestArgMinExampleProblem.cpp  TestEdgeCases.cpp  TestMarginalization.cpp  TestParallelAlgorithms.cpp  TestSSEOptimizer.cpp  TestSlotArray.cpp  TestSlotMap.cpp  TestUtils.h  TestVariableTypes.cpp
